--- a/View/Style.css
+++ b/View/Style.css
@@ -45,14 +45,17 @@ footer {
 }
 
 #login {
-    background-color: white;
-    width: 700px;
-    padding: 30px;
+    background-color: goldenrod;
+    color: antiquewhite;
+    width: 300px;
+    height: 260px;
+    padding: 20px;
     text-align: center;
-    margin-top: 100px;
-    border-radius: 5px;
-    align-content: center;
-}
+    margin-top: 50px;
+    border-radius: 10px;
+    font-family: 'Zilla Slab', serif;
+    box-shadow: 0px 0px 25px 0px rgba(176,176,176,1);
+
 
 #toggle {
     width: 700px;
